--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,64 @@
+# OS
 .DS_Store
 *.swp
 *~
+Thumbs.db
+
+# IDEs
 .vscode/
 .idea/
+*.sln.docstates
+
+# Node.js / Next.js
+node_modules/
+.next/
+out/
+build/
+dist/
+coverage/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# .NET
+bin/
+obj/
+*.user
+*.userosscache
+*.suo
+*.v2
+*.lock.json
+_ReSharper*/
+*_i.c
+*_i.h
+*.ilk
+*.meta
+*.obj
+*.pch
+*.pdb
+*.pgc
+*.pgd
+*.rsp
+*.sbr
+*.tlb
+*.tli
+*.tlh
+*.tmp
+*.tmp_proj
+*_wpftmp.csproj
+*.log
+*.vspscc
+*.vssscc
+.builds
+*.pidb
+*.svclog
+*.scc
+
+# GitForge specific logs
+err.log
+out.log
