--- a/gitforge-client/package.json
+++ b/gitforge-client/package.json
@@ -23,6 +23,7 @@
     "ansi-to-react": "^6.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "electron": "^39.2.7",
     "electron-is-dev": "^3.0.1",
     "lucide-react": "^0.562.0",
