--- a/gitforge-client/package.json
+++ b/gitforge-client/package.json
@@ -1,6 +1,9 @@
 {
   "name": "gitforge-client",
+  "productName": "GitForge",
   "version": "0.1.0",
+  "description": "A modern, AI-powered Git client built with web technologies.",
+  "author": "Ilidio Martins",
   "private": true,
   "main": "main.js",
   "scripts": {
@@ -8,9 +11,40 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "electron": "electron ."
+    "electron": "electron .",
+    "dist": "next build && electron-builder"
+  },
+  "build": {
+    "appId": "com.gitforge.app",
+    "productName": "GitForge",
+    "directories": {
+      "output": "dist"
+    },
+    "files": [
+      "main.js",
+      "public/**/*",
+      "out/**/*",
+      "package.json",
+      "node_modules/**/*"
+    ],
+    "mac": {
+      "category": "public.app-category.developer-tools",
+      "icon": "public/logo.png",
+      "target": "dmg"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "public/logo.png"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "public/logo.png"
+    }
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@gitgraph/react": "^1.6.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-checkbox": "^1.3.3",
@@ -20,17 +54,20 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@types/prismjs": "^1.26.5",
     "ansi-to-react": "^6.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "electron": "^39.2.7",
     "electron-is-dev": "^3.0.1",
+    "electron-serve": "^3.0.0",
     "lucide-react": "^0.562.0",
     "monaco-editor": "^0.55.1",
     "next": "16.1.1",
+    "prismjs": "^1.30.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
@@ -43,6 +80,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "concurrently": "^9.2.1",
+    "electron": "^39.2.7",
+    "electron-builder": "^26.4.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "tailwindcss": "^4",
