--- a/gitforge-client/package.json
+++ b/gitforge-client/package.json
@@ -13,7 +13,8 @@
     "lint": "next lint",
     "electron": "electron .",
     "dist": "next build && electron-builder",
-    "prod": "cd .. && ./publish-server.sh && cd gitforge-client && npm run dist"
+    "prod": "cd .. && ./publish-server.sh && cd gitforge-client && npm run dist",
+    "test": "vitest"
   },
   "build": {
     "appId": "com.gitforge.app",
@@ -86,17 +87,23 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.2",
     "concurrently": "^9.2.1",
     "electron": "^39.2.7",
     "electron-builder": "^26.4.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
+    "jsdom": "^27.4.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
+    "vitest": "^4.0.17",
     "wait-on": "^9.0.3"
   }
 }
