No description provided.

--- a/gitforge-client/package.json
+++ b/gitforge-client/package.json
@@ -90,6 +90,7 @@
     "cmdk": "^1.1.1",
     "electron-is-dev": "^3.0.1",
     "electron-serve": "^3.0.0",
+    "google-genai": "^0.1.0",
     "lucide-react": "^0.562.0",
     "monaco-editor": "^0.55.1",
     "next": "16.1.1",
